src/test/ui/macro-only/unsafe-mod.stderr
error[E0583]: file not found for module `inner`
  --> $DIR/unsafe-mod.rs:4:5
   |
LL |     pub unsafe mod inner;
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `inner`, create file "$DIR/m/inner.rs" or "$DIR/m/inner/mod.rs"

error: module cannot be declared unsafe
  --> $DIR/unsafe-mod.rs:3:1
   |
LL | unsafe mod m {
   | ^^^^^^

error: module cannot be declared unsafe
  --> $DIR/unsafe-mod.rs:4:9
   |
LL |     pub unsafe mod inner;
   |         ^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0583`.
